<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dashkiosk</string>
    <string name="app_versionName">2.6.1</string>
    <string name="preferences">Dashkiosk preferences</string>
    <string name="pref_general_title">General settings</string>
    <string name="pref_general_orientation">Orientation</string>
    <string name="pref_general_orientation_summary">Device orientation</string>
    <string name="pref_lock_settings">Lock settings</string>
    <string name="pref_lock_settings_summary_on">Forbid settings modification from the application</string>
    <string name="pref_lock_settings_summary_off">Allow to modify settings from the application</string>
    <string name="pref_screen_on">Screen state</string>
    <string name="pref_screen_on_summary_on">Keep the screen on</string>
    <string name="pref_screen_on_summary_off">Let the screen turn off on inactivity</string>
    <string name="pref_ping_title">Dashboard URL</string>
    <string name="pref_ping_url">URL</string>
    <string name="pref_ping_url_summary">URL to the dashboard web application</string>
    <string name="pref_ping_timeout">Timeout</string>
    <string name="pref_ping_timeout_summary">Timeout in milliseconds when retrieving URL</string>
    <string name="pref_ssl_title">TLS</string>
    <string name="pref_ssl_insecure">Insecure TLS</string>
    <string name="pref_ssl_insecure_on">TLS errors don\'t prevent loading a page</string>
    <string name="pref_ssl_insecure_off">TLS errors will prevent loading a page</string>
    <string name="pref_ssl_embedded_keystore">Embedded keystore</string>
    <string name="pref_ssl_embedded_keystore_on">Use embedded keystore for client certificates</string>
    <string name="pref_ssl_embedded_keystore_off">Do not use embedded keystore for client certificates</string>
    <string name="pref_ssl_external_keystore">External keystore</string>
    <string name="pref_ssl_external_keystore_on">Use external keystore for client certificates</string>
    <string name="pref_ssl_external_keystore_off">Do not use external keystore for client certificates</string>
    <string name="pref_ssl_keystore_path">Keystore path</string>
    <string name="pref_ssl_keystore_path_summary">Path to external keystore</string>
    <string name="pref_ssl_keystore_password">Keystore password</string>
    <string name="pref_ssl_keystore_password_summary">Password to decrypt the keystore</string>
    <string name="wait">Please, wait.</string>
    <string name="wait_quote">This, Jen, is the Internet.</string>
</resources>
