<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
      android:title="@string/pref_general_title"
      android:key="pref_general_settings">
    <ListPreference
        android:key="pref_general_orientation"
        android:title="@string/pref_general_orientation"
        android:summary="@string/pref_general_orientation_summary"
        android:entries="@array/pref_general_orientation_entries"
        android:entryValues="@array/pref_general_orientation_values"
        android:defaultValue="LANDSCAPE" />
    <CheckBoxPreference
        android:key="pref_lock_settings"
        android:title="@string/pref_lock_settings"
        android:summaryOn="@string/pref_lock_settings_summary_on"
        android:summaryOff="@string/pref_lock_settings_summary_off"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:key="pref_screen_on"
        android:title="@string/pref_screen_on"
        android:summaryOn="@string/pref_screen_on_summary_on"
        android:summaryOff="@string/pref_screen_on_summary_off"
        android:defaultValue="true" />
  </PreferenceCategory>
  <PreferenceCategory
      android:title="@string/pref_ping_title"
      android:key="pref_ping_settings">
    <EditTextPreference
        android:key="pref_ping_url"
        android:title="@string/pref_ping_url"
        android:summary="@string/pref_ping_url_summary"
        android:defaultValue="http://dashkiosk.app.exo.io" />
    <ListPreference
        android:key="pref_ping_timeout"
        android:title="@string/pref_ping_timeout"
        android:summary="@string/pref_ping_timeout_summary"
        android:entries="@array/pref_ping_timeout_entries"
        android:entryValues="@array/pref_ping_timeout_values"
        android:defaultValue="30000" />
  </PreferenceCategory>
  <PreferenceCategory
      android:title="@string/pref_ssl_title"
      android:key="pref_ssl_settings">
    <CheckBoxPreference
        android:key="pref_insecure_ssl"
        android:title="@string/pref_ssl_insecure"
        android:summaryOn="@string/pref_ssl_insecure_on"
        android:summaryOff="@string/pref_ssl_insecure_off"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:key="pref_ssl_embedded_keystore"
        android:title="@string/pref_ssl_embedded_keystore"
        android:summaryOn="@string/pref_ssl_embedded_keystore_on"
        android:summaryOff="@string/pref_ssl_embedded_keystore_off"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_ssl_external_keystore"
        android:title="@string/pref_ssl_external_keystore"
        android:summaryOn="@string/pref_ssl_external_keystore_on"
        android:summaryOff="@string/pref_ssl_external_keystore_off"
        android:defaultValue="false" />
    <EditTextPreference
        android:key="pref_ssl_keystore_path"
        android:title="@string/pref_ssl_keystore_path"
        android:summary="@string/pref_ssl_keystore_path_summary"
        android:defaultValue="/media/dashkiosk.bks"
        android:dependency="pref_ssl_external_keystore" />
    <EditTextPreference
        android:key="pref_ssl_keystore_password"
        android:title="@string/pref_ssl_keystore_password"
        android:summary="@string/pref_ssl_keystore_password_summary"
        android:defaultValue="changeit" />
  </PreferenceCategory>
</PreferenceScreen>
